--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Dan's Contact</title>
+	<title>Dan's Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="assets/reset.css">
@@ -33,7 +33,7 @@
 		<h1>Contact</h1>
 		<!-- Underline -->
 		<hr>
-		<!-- About me copy / Img -->
+		<!-- Form Submmision / Contact -->
 		<div>
 			<form>
 				<p>Name</p>
