fixed html for about page and added style.css code for front end design

--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
 
 	<!-- Navigation / About (active) / Portfolio / Contact -->
 	<nav>
-		<!-- Name Heading -->
-		<div>
-			<h1>Daniel Koublachvili</h1>
-		</div>
-		<!-- Navigation -->
-		<div>
-			<ul>
-				<li>About</li>
-				<li>Protflio</li>
-				<li>Contact</li>
-			</ul>
+		<div class="nav-contain">
+			<!-- Name Heading -->
+			<div class="logo">
+				<h1>Daniel Koublachvili</h1>
+			</div>
+			<!-- Navigation -->
+			<div class="links">
+				<ul>
+					<!-- Links to each page -->
+					<li class="active"><a href="index.html">About</a></li>
+					<li class=""><a href="portfolio.html">Portfolio</a></li>
+					<li class=""><a href="contact.html">Contact</a></li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
@@ -34,18 +37,32 @@
 		<!-- Underline -->
 		<hr>
 		<!-- About me copy / Img -->
-		<div>
-			<img>
-			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-				ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-				fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-				deserunt mollit anim id est laborum. </p>
+		<div class="about-me-txt">
+			<img class="me" src="assets/imgs/BeachSelfie01.png">
+			<p> Experienced Content Creative at 1000heads, working in the Advertising and Marketing industry,
+				specialising in content creation, website development and new business development. </p>
+			<p> Professionally had the pleasure working with BBC, Samsung, Microsoft, Lenovo, Oranjeboom, Keep
+				Cup, UNIQLO, Arrow, Cleanaway, Shake Shack, L’Oreal, eOne and more. </p>
+			<p> Skilling in Graphic Design, Data Analysis, Front Web Development, UX & UI Design, Animation, Video
+				Production, Ideation and Creative Direction - with over 5 years experience. </p>
+			<p> My latest campaign: UNIQLO HEATTECH experietnial campaign June 2019. We created a 5m high giant thermal
+				shirt, that allowed commuters to take thermal selfie's and use the photos as a voucher for a free shirt
+				redmpetion in-store. </p>
+			<ul>
+				<li><a href="https://concreteplayground.com/sydney/event/uniqlo-free-heattech-giveaway" target="_blank">
+						→ Concrete Playground: UNIQLO HEATTECH</a></li>
+				<li><a href="https://www.broadsheet.com.au/sydney/fashion/article/uniqlo-giving-away-free-heatteach-friday"
+						target="_blank"> → Boradsheet: UNIQLO HEATTECH</a></li>
+				<li><a href="https://www.kiis1065.com.au/entertainment/uniqlo-giving-away-free-heattech-clothing-sydney/"
+						target="_blank"> → KIIS 1065: UNIQLO HEATTECH</a></li>
+			</ul>
+			<a href=""></a>
 		</div>
 	</section>
 
 	<!-- Footer -->
 	<footer>
+		<div class="block-color"></div>
 		<p>copyright©</p>
 	</footer>
 </body>
