--- a/contact.html
+++ b/contact.html
@@ -13,17 +13,20 @@
 
 	<!-- Navigation / About (active) / Portfolio / Contact -->
 	<nav>
-		<!-- Name Heading -->
-		<div>
-			<h1>Daniel Koublachvili</h1>
-		</div>
-		<!-- Navigation -->
-		<div>
-			<ul>
-				<li>About</li>
-				<li>Protflio</li>
-				<li>Contact</li>
-			</ul>
+		<div class="nav-contain">
+			<!-- Name Heading -->
+			<div class="logo">
+				<h1>Daniel Koublachvili</h1>
+			</div>
+			<!-- Navigation -->
+			<div class="links">
+				<ul>
+					<!-- Links to each page -->
+					<li class=""><a href="index.html">About</a></li>
+					<li class=""><a href="portfolio.html">Portfolio</a></li>
+					<li class="active"><a href="contact.html">Contact</a></li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
@@ -42,13 +45,14 @@
 				<input type="text" placeholder="example@gmail.com">
 				<p>Message</p>
 				<textarea placeholder="Add your text here..."></textarea>
-				<input type="submit" placeholder="Submit">
+				<button type="submit"> Submit</button>
 			</form>
 		</div>
 	</section>
 
 	<!-- Footer -->
 	<footer>
+		<div class="block-color"></div>
 		<p>copyright©</p>
 	</footer>
 </body>
