added html elements to portfolio.html file, added assets to imgs folder and finished front end styling for style.css page

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,17 +13,20 @@
 
 	<!-- Navigation / About (active) / Portfolio / Contact -->
 	<nav>
-		<!-- Name Heading -->
-		<div>
-			<h1>Daniel Koublachvili</h1>
-		</div>
-		<!-- Navigation -->
-		<div>
-			<ul>
-				<li>About</li>
-				<li>Protflio</li>
-				<li>Contact</li>
-			</ul>
+		<div class="nav-contain">
+			<!-- Name Heading -->
+			<div class="logo">
+				<h1>Daniel Koublachvili</h1>
+			</div>
+			<!-- Navigation -->
+			<div class="links">
+				<ul>
+					<!-- Links to each page -->
+					<li class=""><a href="index.html">About</a></li>
+					<li class="active"><a href="portfolio.html">Portfolio</a></li>
+					<li class=""><a href="contact.html">Contact</a></li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
@@ -35,28 +38,45 @@
 		<hr>
 		<!-- My Work / Portfolio -->
 		<main>
-			<div>
-				<img>
-				<h2>Content 1</h2>
-				<img>
-				<h2>Content 2</h2>
+			<div class="img-contain">
+				<img src="assets/imgs/portfolio-01.png">
+				<div class="over-text1">
+					<h2><a style="color: white;" href="https://shortyawards.com/9th/the-logo-wall" target="_blank">
+							Microsoft LogoWall</a></h2>
+				</div>
+				<img src="assets/imgs/portfolio-02.png">
+				<div class="over-text2">
+					<h2><a style="color: white;" href="https://shortyawards.com/9th/uniqlo-uncover" target="_blank">
+							UNIQLO Uncover</a></h2>
+				</div>
 			</div>
-			<div>
-				<img>
-				<h2>Content 3</h2>
-				<img>
-				<h2>Content 4</h2>
+			<div class="img-contain">
+				<img src="assets/imgs/portfolio-03.png">
+				<div class="over-text1">
+					<h2><a style="color: white;" href="https://vimeo.com/342890352" target="_blank">
+							UNIQLO HEATTECH</a></h2>
+				</div>
+				<img src="assets/imgs/portfolio-04.png">
+				<div class="over-text2">
+					<h2><a style="color: white;" href="https://vimeo.com/248073356" target="_blank">
+							Microsoft AIH Web</a></h2>
+				</div>
 			</div>
-			<div>
-				<img>
-				<h2>Content 5</h2>
+			<div class="img-contain">
+				<img src="assets/imgs/portfolio-05.png">
+				<div class="over-text1">
+					<h2><a style="color: white;" href="https://vimeo.com/229511082" target="_blank">
+							Samsung 360 Video</a></h2>
+				</div>
 			</div>
+
 		</main>
 	</section>
 
 	<!-- Footer -->
 	<footer>
-		<p>copyright©</p>
+		<div class="block-color"></div>
+		<p>copyright ©</p>
 	</footer>
 </body>
 
